<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="app_name">Email</string>
    <string name="accounts_title">Your accounts</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="notification_new_title">New email</string>
    <plurals name="notification_new_one_account_fmt">
        
        <item quantity="one">
            <xliff:g example="1" id="unread_message_count">%d</xliff:g> unread (<xliff:g id="account">%s</xliff:g>)</item> 

        
        <item quantity="few">
            <xliff:g example="2" id="unread_message_count">%d</xliff:g> unread (<xliff:g id="account">%s</xliff:g>)</item> 

        
        <item quantity="other">
            <xliff:g example="279" id="unread_message_count">%d</xliff:g> unread (<xliff:g id="account">%s</xliff:g>)</item>
    </plurals>
    <plurals name="notification_new_multi_account_fmt">
        
        <item quantity="few">in <xliff:g example="2" id="number_accounts">%d</xliff:g> accounts</item>
        
        <item quantity="other">in <xliff:g example="10" id="number_accounts">%d</xliff:g> accounts</item>
    </plurals>
    <string name="special_mailbox_name_inbox">Inbox</string>
    <string name="special_mailbox_name_outbox">Outbox</string>
    <string name="special_mailbox_name_drafts">Drafts</string>
    <string name="special_mailbox_name_trash">Trash</string>
    <string name="special_mailbox_name_sent">Sent</string>
    <string name="accounts_welcome">Welcome to Email </string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_compose_to_hint">To</string>
    <string name="message_compose_cc_hint">Cc</string>
    <string name="message_compose_bcc_hint">Bcc</string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_body_hint">Compose Mail</string>
    <string name="message_compose_fwd_header_fmt">\n\n-------- Original Message --------\nSubject: <xliff:g id="subject">%s</xliff:g>\nFrom: <xliff:g id="sender">%s</xliff:g>\nTo: <xliff:g id="to">%s</xliff:g>\nCC: <xliff:g id="cc">%s</xliff:g>\n\n</string>
    <string name="message_compose_reply_header_fmt">\n\n<xliff:g id="sender">%s</xliff:g> wrote:\n\n</string>
    <string name="message_compose_quoted_text_label">Quoted text</string>
    <string name="message_compose_error_no_recipients">You must add at least one recipient.</string>
    <string name="message_compose_attachments_skipped_toast">Some attachments cannot be forwarded because they have not downloaded.</string>
    <string msgid="8944461117941172986" name="message_compose_attachment_size">File too large to attach.</string>
    <string name="message_view_to_label">To:</string>
    <string name="message_view_cc_label">Cc:</string>
    <string name="message_view_attachment_view_action">Open</string>
    <string name="message_view_attachment_download_action">Save</string>
    <string name="message_view_status_attachment_saved">Attachment saved to SD card as <xliff:g id="filename">%s</xliff:g>.</string>
    <string name="message_view_status_attachment_not_saved">Unable to save attachment to SD card.</string>
    <string name="message_view_show_pictures_instructions">Select \"Show pictures\" to display embedded pictures.</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_fetching_attachment_toast">Fetching attachment.</string>
    <string name="message_deleted_toast">Message deleted.</string>
    <string name="message_discarded_toast">Message discarded.</string>
    <string name="message_saved_toast">Message saved as draft.</string>
    <string name="add_contact_dlg_title">Add Contact</string>
    <string name="add_contact_dlg_message_fmt">Add \"<xliff:g id="email">%s</xliff:g>\" to contacts
        </string>
    <string msgid="2079093904785941494" name="message_view_display_attachment_toast">This attachment cannot be displayed.</string>
    <string name="account_setup_basics_title">Set up email</string>
    <string name="account_setup_basics_instructions">Type your account email address:</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_default_label">Send email from this account by default.</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_username_password_toast">Please type a valid email address and password.</string>
    <string name="account_setup_check_settings_title"/>
    <string name="account_setup_check_settings_retr_info_msg">Retrieving account information\u2026</string>
    <string name="account_setup_check_settings_check_incoming_msg">Checking incoming server settings\u2026</string>
    <string name="account_setup_check_settings_check_outgoing_msg">Checking outgoing server settings\u2026</string>
    <string name="account_setup_check_settings_canceling_msg">Canceling\u2026</string>
    <string name="account_setup_names_title">Set up email</string>
    <string name="account_setup_names_instructions">Your account is set up, and email is on its way!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional)</string>
    <string name="account_setup_names_user_name_label">Your name (displayed on outgoing messages)</string>
    <string name="account_setup_account_type_title">Add new email account</string>
    <string name="account_setup_account_type_instructions">What type of account is this?</string>
    <string name="account_setup_account_type_pop_action">POP3 account</string>
    <string name="account_setup_account_type_imap_action">IMAP account</string>
    <string name="account_setup_incoming_title">Incoming server settings</string>
    <string name="account_setup_incoming_username_label">Username</string>
    <string name="account_setup_incoming_password_label">Password</string>
    <string name="account_setup_incoming_pop_server_label">POP3 server</string>
    <string name="account_setup_incoming_imap_server_label">IMAP server</string>
    <string name="account_setup_incoming_port_label">Port</string>
    <string name="account_setup_incoming_security_label">Security type</string>
    <string name="account_setup_incoming_security_none_label">None</string>
    <string name="account_setup_incoming_security_ssl_optional_label">SSL (if available)</string>
    <string name="account_setup_incoming_security_ssl_label">SSL (always)</string>
    <string name="account_setup_incoming_security_tls_optional_label">TLS (if available)</string>
    <string name="account_setup_incoming_security_tls_label">TLS (always)</string>
    <string name="account_setup_incoming_delete_policy_label">Delete email from server</string>
    <string name="account_setup_incoming_delete_policy_never_label">Never</string>
    <string name="account_setup_incoming_delete_policy_7days_label">After 7 days</string>
    <string name="account_setup_incoming_delete_policy_delete_label">When I delete from Inbox</string>
    <string name="account_setup_incoming_imap_path_prefix_label">IMAP path prefix</string>
    <string name="account_setup_incoming_imap_path_prefix_hint">Optional</string>
    <string name="account_setup_outgoing_title">Outgoing server settings</string>
    <string name="account_setup_outgoing_smtp_server_label">SMTP server</string>
    <string name="account_setup_outgoing_port_label">Port</string>
    <string name="account_setup_outgoing_security_label">Security type</string>
    <string name="account_setup_outgoing_require_login_label">Require sign-in.</string>
    <string name="account_setup_outgoing_username_label">Username</string>
    <string name="account_setup_outgoing_password_label">Password</string>
    <string name="account_setup_options_title">Account options</string>
    <string name="account_setup_options_mail_check_frequency_label">Email checking frequency</string>
    <string name="account_setup_options_mail_check_frequency_never">Never</string>
    <string name="account_setup_options_mail_check_frequency_5min">Every 5 minutes</string>
    <string name="account_setup_options_mail_check_frequency_10min">Every 10 minutes</string>
    <string name="account_setup_options_mail_check_frequency_15min">Every 15 minutes</string>
    <string name="account_setup_options_mail_check_frequency_30min">Every 30 minutes</string>
    <string name="account_setup_options_mail_check_frequency_1hour">Every hour</string>
    <string name="account_setup_options_default_label">Send email from this account by default.</string>
    <string name="account_setup_options_notify_label">Notify me when email arrives.</string>
    <string name="account_setup_failed_dlg_title">Setup could not finish</string>
    <string name="account_setup_failed_dlg_auth_message">Username or password incorrect.</string>
    <string name="account_setup_failed_dlg_auth_message_fmt">Username or password incorrect.\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_dlg_certificate_message">Cannot safely connect to server.</string>
    <string name="account_setup_failed_dlg_certificate_message_fmt">Cannot safely connect to server.\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_dlg_server_message">Cannot connect to server.</string>
    <string name="account_setup_failed_dlg_server_message_fmt">Cannot connect to server.\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_tls_required">TLS required but not supported by server.</string>
    <string name="account_setup_failed_auth_required">Authentication methods are not supported by server.</string>
</resources>