<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:orientation="vertical">
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true">
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:background="#ededed">
                <MultiAutoCompleteTextView
                    android:id="@+id/to" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:layout_marginLeft="6px"
                    android:layout_marginRight="6px"
                    android:inputType="textEmailAddress|textMultiLine"
                    android:imeOptions="actionNext"
                    android:hint="@string/message_compose_to_hint" />
                <MultiAutoCompleteTextView
                    android:id="@+id/cc" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:layout_marginLeft="6px"
                    android:layout_marginRight="6px"
                    android:inputType="textEmailAddress|textMultiLine"
                    android:imeOptions="actionNext"
                    android:hint="@string/message_compose_cc_hint"
                    android:visibility="gone" />
                <MultiAutoCompleteTextView
                    android:id="@+id/bcc" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:layout_marginLeft="6px"
                    android:layout_marginRight="6px"
                    android:inputType="textEmailAddress|textMultiLine"
                    android:imeOptions="actionNext"
                    android:hint="@string/message_compose_bcc_hint"
                    android:visibility="gone" />
                <EditText android:id="@+id/subject"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:layout_marginLeft="6px"
                    android:layout_marginRight="6px"
                    android:hint="@string/message_compose_subject_hint"
                    android:inputType="textEmailSubject|textAutoCorrect|textCapSentences|textImeMultiLine" 
                    android:imeOptions="actionNext"
                    />
               
                <LinearLayout android:id="@+id/attachments"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <View android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@drawable/divider_horizontal_email" />
            </LinearLayout>
            <EditText android:id="@+id/message_content"
                android:textColor="?android:attr/textColorSecondaryInverse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="top"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/message_compose_body_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:imeOptions="actionDone|flagNoEnterAction"
                />
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="1dip"
        android:background="@android:drawable/menu_full_frame" >
        <Button
            android:id="@+id/send"
            android:text="@string/send_action"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/discard"
            android:text="@string/discard_action"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
